fixed errors. project complete with stretch

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -26,6 +26,12 @@
   color: #09d3ac;
 }
 
+.error {
+  margin: 0;
+  position: absolute;
+  color: red;
+}
+
 input,
 textarea {
   margin-top: 32px;
@@ -49,7 +55,7 @@ label {
   display: block;
   font-size: 16px;
   font-family: sans-serif;
-  color: #444;
+  color: #303030;
   line-height: 1.3;
   padding: 0.6em 1.4em 0.5em 0.8em;
   width: 100%;
